# epub-tailor

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  homebrew.yml  release.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/icons-src/: build.sh
app/scripts/: prepare-sidecar.mjs
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  open_files.rs
app/src/lib/api/: argv.ts  book-view.ts  close-guard.ts  contract.ts  copies.ts  covers.ts  edits.ts  errors.ts  format.ts  geometry.ts  keys.ts  lookup.ts  meta.ts  outputs.ts  plan.ts  sidecar.ts  templates.ts  volumes.ts  window.ts
app/src/lib/components/: AcceptStep.svelte  ActionBar.svelte  BookCard.svelte  BookGrid.svelte  BookList.svelte  BookRow.svelte  BrowseButtons.svelte  CandidateCard.svelte  CardDetails.svelte  ConfirmDialog.svelte  CoverLightbox.svelte  DropZone.svelte  EditInspector.svelte  FileList.svelte  FileRow.svelte  FitInspector.svelte  Inspector.svelte  MetadataEditor.svelte  MetadataField.svelte  MetadataSearchDialog.svelte  OutputPicker.svelte  ProfilePicker.svelte  TemplateField.svelte  UpdateBanner.svelte  Workbench.svelte
app/src/lib/stores/: books.svelte.ts  edits.svelte.ts  inplace.ts  jobs.svelte.ts  profiles.svelte.ts  settings.svelte.ts
app/src/tests/: argv.test.ts  book-view.test.ts  close-guard.test.ts  contract.test.ts  copies.test.ts  covers.test.ts  edits.test.ts  format.test.ts  geometry.test.ts  jobs.test.ts  keys.test.ts  outputs.test.ts  settings.test.ts  sidecar.test.ts  templates.test.ts
crates/cli/: Cargo.toml
crates/cli/src/: batch.rs  discover.rs  lookup.rs  lookup_cmd.rs  main.rs
crates/cli/tests/: batch.rs  cli.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/profiles/: _modern-reader.json  boox-go-7.json  boox-go-color-7.json  boox-page.json  boox-palma-2-pro.json  epub.json  kindle-colorsoft.json  kindle-paperwhite.json  kindle-scribe-colorsoft.json  kindle-scribe.json  kindle.json  kobo-clara-bw.json  kobo-clara-colour.json  kobo-elipsa-2e.json  kobo-libra-colour.json  nomad.json  pocketbook-era-color.json  pocketbook-era.json  pocketbook-inkpad-4.json  pocketbook-inkpad-color-3.json  pocketbook-verse-pro.json  pocketbook-verse.json  tolino-epos-3.json  tolino-shine-color.json  tolino-shine.json  tolino-vision-color.json  x3.json  x4.json
crates/core/src/: chapter_split.rs  error.rs  lib.rs  options.rs  report.rs  validate.rs
crates/core/src/color/: css.rs  mod.rs  palette.rs  solve.rs  space.rs  svg.rs
crates/core/src/color/snapshots/: epub_tailor_core__color__css__tests__gnarly_sheet_snapshot.snap
crates/core/src/css/: caps.rs  mod.rs  sanitize.rs  scope.rs  subset.rs
crates/core/src/css/snapshots/: epub_tailor_core__css__subset__tests__gnarly_sheet_snapshot.snap
crates/core/src/epub/: mod.rs  model.rs  read.rs  stamp.rs  write.rs
crates/core/src/filter/: mod.rs  prune.rs
crates/core/src/html/: anchors.rs  boxes.rs  code.rs  dedupe.rs  dom.rs  escape.rs  footnotes.rs  lists.rs  mod.rs  parse.rs  serialize.rs  styles.rs  table_render.rs  tables.rs  text.rs
crates/core/src/html/snapshots/: epub_tailor_core__html__anchors__tests__id_conflict_aliases_and_rewrites_same_doc_snapshot.snap  epub_tailor_core__html__anchors__tests__span_id_moves_to_block_snapshot.snap  epub_tailor_core__html__boxes__tests__aside_with_bold_lead_snapshot.snap  epub_tailor_core__html__boxes__tests__dl_becomes_paragraphs_snapshot.snap  epub_tailor_core__html__boxes__tests__figure_caption_moves_after_image_snapshot.snap  epub_tailor_core__html__code__tests__pre_with_tabs_and_indentation_snapshot.snap  epub_tailor_core__html__footnotes__tests__javascript_with_data_target_is_rewritten_snapshot.snap  epub_tailor_core__html__footnotes__tests__javascript_without_target_is_unwrapped_snapshot.snap  epub_tailor_core__html__lists__tests__block_li_continuations_snapshot.snap  epub_tailor_core__html__lists__tests__decimal_list_snapshot.snap  epub_tailor_core__html__lists__tests__nested_ol_compound_labels_snapshot.snap  epub_tailor_core__html__lists__tests__roman_type_snapshot.snap  epub_tailor_core__html__lists__tests__start_and_type_and_value_snapshot.snap  epub_tailor_core__html__lists__tests__ul_nested_in_ol_stays_a_list_snapshot.snap  epub_tailor_core__html__tables__tests__headerless_row_snapshot.snap  epub_tailor_core__html__tables__tests__implicit_header_first_row_all_th_snapshot.snap  epub_tailor_core__html__tables__tests__nested_table_flattened_innermost_first_snapshot.snap  epub_tailor_core__html__tables__tests__single_column_unwraps_snapshot.snap  epub_tailor_core__html__tables__tests__thead_table_snapshot.snap
crates/core/src/image/: autocontrast.rs  canvas.rs  classify.rs  encode.rs  mod.rs  resize.rs  split.rs  svg.rs
crates/core/src/markdown/: assets.rs  frontmatter.rs  mod.rs  render.rs  split.rs
crates/core/src/metadata/: mod.rs  openlibrary.rs
crates/core/src/profile/: caps.rs  features.rs  mod.rs
crates/core/templates/: chapter.xhtml  container.xml  content.opf  nav.xhtml  toc.ncx
crates/core/tests/: chapter_split.rs  color_remap.rs  css_kitchen.rs  css_relocated_scope.rs  css_sanitize.rs  duplicate_ids.rs  epubcheck_roundtrip.rs  filters.rs  image_pipeline.rs  kitchen_sink.rs  markdown_pipeline.rs  metadata.rs  nfc_convergence.rs  profile_epub.rs  profiles.rs  read_epub.rs  serialize_roundtrip.proptest-regressions  serialize_roundtrip.rs  stamp.rs  svg_pipeline.rs  tables_image.rs  toc_aliases.rs  xmlns_regression.rs
crates/core/tests/common/: mod.rs
docs/: device-constraints.md  profiles.md  releasing.md
research/: boox-readers.md  crosspoint-reader-epub-support.md  ereader-market.md  kindle-epub-ingestion.md  kobo-readers.md  pocketbook-readers.md  supernote-a6x2-nomad.md  tolino-readers.md  xteink-x4-device-and-ecosystem.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+4 files in other folders)
