[package]
name = "epub-tailor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "epub_tailor_core"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
roxmltree.workspace = true
encoding_rs.workspace = true
indexmap.workspace = true
kuchikiki.workspace = true
html5ever.workspace = true
image.workspace = true
jpeg-encoder.workspace = true
resvg.workspace = true
unicode-normalization.workspace = true
comrak.workspace = true
serde_yaml_ng.workspace = true
askama.workspace = true
time.workspace = true
lightningcss.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
insta.workspace = true

[lints]
workspace = true
